--- a/lambdas/templates/index.html
+++ b/lambdas/templates/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE HTML>
 <html lang="en-US">
 <head>
 <title>Sample Web App</title>
 
-<script src="Storage.js"></script>
-<link rel="stylesheet" href="Style.css">
+<script src="/templates/Storage.js"></script>
+<link rel="stylesheet" href="/templates/Styles.css">
 </head>
 
 
